added skill and contrnt

--- a/index.html
+++ b/index.html
@@ -68,7 +68,43 @@
 </div>
     
 </section>
+<!-- what i do section -->
+<section class="what-i-do">
+<h3 class="section-title">what i do</h3>
+<div class="skills-container">
+    <div class="skill">
+        <img src="images/icons/js.png" alt="">
+        <p class="skill-title">Vanilla javaScript</p>
+        <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nulla rerum voluptate at culpa consectetur nisi suscipit accusamus incidunt veniam.</p>
+    </div>
+    <div class="skill">
+        <img src="images/icons/mongo.png" alt="">
+        <p class="skill-title">Mongoli</p>
+        <p class="skill-description">Quas molestiae ducimus harum incidunt earum dolores autem optio aut in itaque beatae deleniti quos, excepturi hic non corrupti ipsum.</p>
+    </div>
+    <div class="skill">
+        <img src="images/icons/react.png" alt="">
+        <p class="skill-title">React</p>
+        <p class="skill-description">Molestiae accusantium ab distinctio ullam, in, provident inventore nihil pariatur aut placeat quod voluptatem qui modi consectetur harum, consequatur vel.</p>
+    </div>
+    <div class="skill">
+        <img src="images/icons/nodejs.png" alt="">
+        <p class="skill-title">node Js</p>
+        <p class="skill-description">Quidem, voluptates. Deserunt culpa ratione maiores tempora ut. Officia numquam odit, exercitationem quibusdam molestiae natus quam ipsam. Quam, qui magnam!</p>
+    </div>
+</div>
+
+        </section>
+        <!-- resumi section -->
+<section>
+<h3 class="section-title">A Sammari of My Resume</h3>
+
+
+
+        </section>
+
 </main>
+
 <footer>
 
 </footer>
